--- a/forex/css/style.css
+++ b/forex/css/style.css
@@ -1065,13 +1065,58 @@ body {
 .payment {
   background: #2e2963; }
 
-.payment--temp {
-  background: #4b426d; }
+.payment__flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  width: 1000px;
+  margin: auto;
+  padding: 20px 0; }
 
 .payment__box {
-  height: 60px;
-  padding: 20px 0;
-  background: url("../img/pay-sprite.png") no-repeat center; }
+  opacity: 0.5;
+  cursor: pointer;
+  -webkit-transition: 0.2s;
+  transition: 0.2s; }
+  .payment__box:hover {
+    opacity: 1; }
+
+.payment__box--methods {
+  color: #fff;
+  font-size: 18px;
+  font-weight: bold;
+  text-align: center;
+  text-transform: uppercase; }
+
+.payment__box--visa {
+  width: 92px;
+  height: 29px;
+  background: url("../img/visa.png") no-repeat; }
+
+.payment__box--master {
+  width: 59px;
+  height: 35px;
+  background: url("../img/master.png"); }
+
+.payment__box--bank {
+  width: 123px;
+  height: 39px;
+  background: url("../img/bank.png"); }
+
+.payment__box--net {
+  width: 131px;
+  height: 22px;
+  background: url("../img/net.png"); }
+
+.payment__box--skrill {
+  width: 85px;
+  height: 29px;
+  background: url("../img/skrill.png"); }
 
 .page-footer {
   color: white;
