--- a/forex/css/style.css
+++ b/forex/css/style.css
@@ -1121,13 +1121,16 @@ body {
   height: 29px;
   background: url("../img/skrill.png"); }
 
+@media screen and (max-width: 1200px) {
+  .payment__flex {
+    width: auto; } }
+
 @media screen and (max-width: 768px) {
   .payment__flex {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column;
-    width: auto;
     padding: 30px 0; }
   .payment__box {
     margin-bottom: 20px;
