--- a/forex/sass/blocks/payment.scss
+++ b/forex/sass/blocks/payment.scss
@@ -63,12 +63,16 @@
   background: url('../img/skrill.png');
 }
 
-@media screen and ($tablet-widths) {}
+@media screen and ($tablet-widths) {
+  .payment__flex {
+    width: auto;
+  }
+}
 
 @media screen and ($mobile-widths) {
   .payment__flex {
     flex-direction: column;
-    width: auto;
+    
     padding: 30px 0;
   }
   
