--- a/forex-lp/css/style.css
+++ b/forex-lp/css/style.css
@@ -366,7 +366,7 @@ body {
   background: url("../img/test.png") no-repeat center; }
 
 .app__top {
-  width: 600px;
+  width: 700px;
   margin: auto;
   color: #2f2861;
   text-align: center; }
@@ -531,16 +531,78 @@ body {
     .acc a:hover {
       padding: 15px; } }
 
-.pay {
-  padding: 30px 0;
+.payment {
   background: #2f2861; }
 
-.pay__methods {
-  width: 100%;
-  height: 58px;
+.payment__flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  width: 1000px;
   margin: auto;
-  background: url("../img/pay.png") no-repeat center;
-  background-size: contain; }
+  padding: 20px 0; }
+
+.payment__box {
+  opacity: 0.5;
+  cursor: pointer;
+  -webkit-transition: 0.2s;
+  transition: 0.2s; }
+  .payment__box:hover {
+    opacity: 1; }
+
+.payment__box--methods {
+  color: #fff;
+  font-size: 18px;
+  font-family: 'SF UI Display Heavy', sans-serif;
+  text-align: center;
+  text-transform: uppercase; }
+
+.payment__box--visa {
+  width: 92px;
+  height: 29px;
+  background: url("../img/visa.png") no-repeat; }
+
+.payment__box--master {
+  width: 59px;
+  height: 35px;
+  background: url("../img/master.png"); }
+
+.payment__box--bank {
+  width: 123px;
+  height: 39px;
+  background: url("../img/bank.png"); }
+
+.payment__box--net {
+  width: 131px;
+  height: 22px;
+  background: url("../img/net.png"); }
+
+.payment__box--skrill {
+  width: 85px;
+  height: 29px;
+  background: url("../img/skrill.png"); }
+
+@media screen and (max-width: 1200px) {
+  .payment__flex {
+    width: auto; } }
+
+@media screen and (max-width: 768px) {
+  .payment__flex {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    padding: 30px 0; }
+  .payment__box {
+    margin-bottom: 20px;
+    opacity: 1; }
+  .payment__box--skrill {
+    margin-bottom: 0; } }
 
 .footer {
   padding: 40px 0;
