fix pay opacity

--- a/forex-lp/css/style.css
+++ b/forex-lp/css/style.css
@@ -560,7 +560,8 @@ body {
   font-size: 18px;
   font-family: 'SF UI Display Heavy', sans-serif;
   text-align: center;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  opacity: 1; }
 
 .payment__box--visa {
   width: 92px;
