--- a/forex-lp/sass/blocks/pay.scss
+++ b/forex-lp/sass/blocks/pay.scss
@@ -27,6 +27,7 @@
   font-family: 'SF UI Display Heavy', sans-serif;
   text-align: center;
   text-transform: uppercase;
+  opacity: 1;
 }
 
 .payment__box--visa {
