--- a/forex-lp/sass/blocks/form.scss
+++ b/forex-lp/sass/blocks/form.scss
@@ -26,6 +26,21 @@
     border-radius: 5px;
     outline: none;
   }
+  
+  & select {
+    margin-bottom: 10px;
+    padding: 9px 10px;
+    color: #777;
+    border-radius: 5px;
+    
+    & optgroup {
+      color: black;
+    }
+  }
+}
+
+.test {
+  color: red;
 }
 
 .form__btn {
