--- a/forex-lp/css/style.css
+++ b/forex-lp/css/style.css
@@ -225,8 +225,7 @@ body {
     font-size: 14px;
     font-family: 'SF UI Display Regular', sans-serif;
     border: 2px solid #fff;
-    border-radius: 5px;
-    outline: none; }
+    border-radius: 5px; }
   .form__input select {
     margin-bottom: 10px;
     padding: 9px 10px;
