--- a/forex/css/style.css
+++ b/forex/css/style.css
@@ -1919,6 +1919,15 @@ button[type="submit"] {
     transition: 0.3s;
     cursor: pointer; }
 
+.bronze {
+  background: #dc9554 !important; }
+
+.silver {
+  background: #9b9b9b !important; }
+
+.gold {
+  background: #e7c85d !important; }
+
 .account-comparison__bronze:hover {
   background: #dc9554; }
 
