--- a/forex/sass/blocks/account-comparison.scss
+++ b/forex/sass/blocks/account-comparison.scss
@@ -39,6 +39,18 @@
   }
 }
 
+.bronze {
+  background: #dc9554 !important;
+}
+
+.silver {
+  background: #9b9b9b !important;
+}
+
+.gold {
+  background: #e7c85d !important;
+}
+
 .account-comparison__bronze {
   
   &:hover {
