--- a/forex/css/style.css
+++ b/forex/css/style.css
@@ -538,7 +538,9 @@ body {
 .slider__slide--three {
   background: url("../img/slider-t.png") no-repeat top;
   background-size: cover; }
-  .slider__slide--three p:first-of-type {
+  .slider__slide--three p {
+    color: #2e2963; }
+  .slider__slide--three small {
     color: #2e2963; }
 
 .slider__slide--four {
