--- a/mm/css/style.css
+++ b/mm/css/style.css
@@ -132,11 +132,36 @@ body {
   font-weight: 600;
   font-style: italic; }
 
-.video video {
-  width: 100%;
-  height: 100vh;
-  -o-object-fit: fill;
-  object-fit: fill; }
+.video {
+  position: fixed;
+  z-index: 1; }
+  .video video {
+    width: 100%;
+    height: 100vh;
+    -o-object-fit: fill;
+    object-fit: fill; }
+  .video h1 {
+    color: red; }
 
-.video h1 {
-  color: red; }
+.header {
+  position: relative;
+  z-index: 2; }
+
+.main-nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  height: 90px; }
+
+.button {
+  padding: 10px 25px;
+  font-size: 12px;
+  text-decoration: none;
+  border-radius: 20px;
+  background: #eeba1d; }
