--- a/mm/sass/blocks/button.scss
+++ b/mm/sass/blocks/button.scss
@@ -1,7 +1,26 @@
 .button {
-  padding: 10px 25px;
+  padding: 8px 23px;
+  color: #000;
   font-size: 12px;
   text-decoration: none;
+  text-transform: uppercase;
+  border: 2px solid $sc;
   border-radius: 20px;
   background: $sc;
+  transition: 0.3s;
+  
+  &:hover {
+    color: #fff;
+    background: transparent;
+  }
+  
+  &--black {
+    color: #fff;
+    border: 2px solid #000;
+    background: #000;
+  }
+  
+  &--title {
+    font-size: 16px;
+  }
 }
