--- a/mm/sass/blocks/video.scss
+++ b/mm/sass/blocks/video.scss
@@ -6,10 +6,25 @@
     width: 100%;
     height: 100vh;
     object-fit: fill;
-    // opacity: 0.5;
   }
+}
+
+.video__title {
+  position: relative;
+  margin-top: 150px;
+  color: #fff;
+  z-index: 2;
   
   & h1 {
-    color: red;
+    margin-bottom: 30px;
+    font-size: 60px;
+    text-transform: uppercase;
+  }
+  
+  & p {
+    margin-top: 0;
+    margin-bottom: 75px;
+    font-size: 24px;
+    text-transform: uppercase;
   }
 }
