--- a/mm/css/style.css
+++ b/mm/css/style.css
@@ -156,6 +156,15 @@ body {
     font-size: 24px;
     text-transform: uppercase; }
 
+.video__frame {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 55px;
+  background: #000;
+  opacity: 0.7;
+  z-index: 2; }
+
 .header {
   position: relative;
   border-bottom: 2px solid rgba(82, 82, 82, 0.5);
