--- a/mm/sass/blocks/video.scss
+++ b/mm/sass/blocks/video.scss
@@ -28,3 +28,13 @@
     text-transform: uppercase;
   }
 }
+
+.video__frame {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 55px;
+  background: #000;
+  opacity: 0.7;
+  z-index: 2;
+}
