--- a/mm/css/style.css
+++ b/mm/css/style.css
@@ -132,43 +132,30 @@ body {
   font-weight: 600;
   font-style: italic; }
 
-.video {
-  position: fixed;
-  z-index: 1; }
-  .video video {
-    width: 100%;
-    height: 100vh;
-    -o-object-fit: fill;
-    object-fit: fill; }
+.video video {
+  width: 100%;
+  height: 100vh;
+  -o-object-fit: fill;
+  object-fit: fill; }
+
+.video__content {
+  position: absolute;
+  top: 0;
+  width: 1200px; }
 
 .video__title {
-  position: relative;
-  margin-top: 150px;
+  margin-top: 200px;
   color: #fff;
-  z-index: 2; }
+  text-transform: uppercase; }
   .video__title h1 {
     margin-bottom: 30px;
-    font-size: 60px;
-    text-transform: uppercase; }
+    font-size: 60px; }
   .video__title p {
-    margin-top: 0;
     margin-bottom: 75px;
-    font-size: 24px;
-    text-transform: uppercase; }
-
-.video__frame {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 55px;
-  background: #000;
-  opacity: 0.7;
-  z-index: 2; }
+    font-size: 24px; }
 
 .header {
-  position: relative;
-  border-bottom: 2px solid rgba(82, 82, 82, 0.5);
-  z-index: 2; }
+  border-bottom: 1px solid gray; }
 
 .main-nav {
   display: -webkit-box;
@@ -204,23 +191,16 @@ body {
     font-size: 16px; }
 
 .sub-nav {
-  position: relative;
-  width: 250px;
-  margin: auto;
-  padding-top: 20px;
-  z-index: 2; }
-  .sub-nav a {
-    padding-bottom: 20px;
-    color: #fff;
-    font-size: 14px;
-    text-decoration: none;
-    text-transform: uppercase;
-    background: url("../img/link-arrow.png") no-repeat bottom; }
-
-.sub-nav__flex {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
-  justify-content: space-between; }
+  justify-content: space-between;
+  width: 250px;
+  padding-top: 20px;
+  margin: auto; }
+  .sub-nav a {
+    color: #fff;
+    text-decoration: none;
+    text-transform: uppercase; }
