--- a/mm/sass/blocks/header.scss
+++ b/mm/sass/blocks/header.scss
@@ -1,5 +1,3 @@
-.header  {
-  position: relative;
-  border-bottom: 2px solid rgba(82, 82, 82, 0.5);
-  z-index: 2;
+.header {
+  border-bottom: 1px solid gray;
 }
