--- a/mm/css/style.css
+++ b/mm/css/style.css
@@ -134,9 +134,16 @@ body {
 
 .video video {
   width: 100%;
-  height: 100vh;
+  height: 94vh;
   -o-object-fit: fill;
   object-fit: fill; }
+
+.video iframe {
+  width: 100%;
+  height: 34px;
+  margin-top: -4px;
+  padding-top: 15px;
+  background: #252525; }
 
 .video__content {
   position: absolute;
@@ -153,9 +160,6 @@ body {
   .video__title p {
     margin-bottom: 75px;
     font-size: 24px; }
-
-.header {
-  border-bottom: 1px solid gray; }
 
 .main-nav {
   display: -webkit-box;
@@ -204,3 +208,47 @@ body {
     color: #fff;
     text-decoration: none;
     text-transform: uppercase; }
+
+.trading__flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  padding-top: 80px;
+  padding-bottom: 60px; }
+
+.trading__flex--second {
+  padding-top: 0;
+  padding-bottom: 80px; }
+
+.trading__left {
+  -ms-flex-item-align: center;
+  align-self: center; }
+  .trading__left b {
+    font-size: 40px;
+    text-transform: uppercase;
+    font-family: 'SF UI Display Black', sans-serif; }
+  .trading__left p {
+    opacity: 0.7; }
+
+.trading__box {
+  width: 270px;
+  padding-top: 170px;
+  text-align: center; }
+  .trading__box b {
+    font-size: 22px;
+    text-transform: uppercase; }
+
+.trading__box--tools {
+  background: url("../img/trading-1.png") no-repeat top; }
+
+.trading__box--trans {
+  background: url("../img/trading-2.png") no-repeat top; }
+
+.trading__box--funds {
+  background: url("../img/trading-3.png") no-repeat top; }
+
+.trading__box--algo {
+  background: url("../img/trading-4.png") no-repeat top; }
