--- a/mm/sass/blocks/video.scss
+++ b/mm/sass/blocks/video.scss
@@ -2,8 +2,16 @@
   
   & video {
     width: 100%;
-    height: 100vh;
+    height: 94vh;
     object-fit: fill;
+  }
+  
+  & iframe {
+    width: 100%;
+    height: 34px;
+    margin-top: -4px;
+    padding-top: 15px;
+    background: #252525;
   }
 }
 
