--- a/mm/sass/blocks/button.scss
+++ b/mm/sass/blocks/button.scss
@@ -2,6 +2,8 @@
   padding: 8px 23px;
   color: #000;
   font-size: 12px;
+  font-weight: bold;
+  font-family: 'SF UI Display Regular', sans-serif;
   text-decoration: none;
   text-transform: uppercase;
   border: 2px solid $sc;
