--- a/mm/sass/blocks/sub-nav.scss
+++ b/mm/sass/blocks/sub-nav.scss
@@ -7,7 +7,10 @@
   
   & a {
     color: #fff;
+    font-size: 14px;
+    font-weight: bold;
     text-decoration: none;
     text-transform: uppercase;
+    font-family: 'SF UI Display Regular', sans-serif;
   }
 }
