--- a/mm/sass/blocks/trading.scss
+++ b/mm/sass/blocks/trading.scss
@@ -20,6 +20,7 @@
   }
   
   & p {
+    font-family: 'SF UI Display Regular', sans-serif;
     opacity: 0.7;
   }
 }
@@ -30,8 +31,14 @@
   text-align: center;
   
   & b {
-    font-size: 22px;
+    font-size: 20px;
+    font-family: 'SF UI Display Bold', sans-serif;
     text-transform: uppercase;
+  }
+  
+  & p {
+    font-family: 'SF UI Display Regular', sans-serif;
+    opacity: 0.7;
   }
 }
 
