--- a/mm/sass/blocks/video.scss
+++ b/mm/sass/blocks/video.scss
@@ -29,10 +29,14 @@
   & h1 {
     margin-bottom: 30px;
     font-size: 60px;
+    font-family: 'SF UI Display Black', sans-serif;
   }
   
   & p {
     margin-bottom: 75px;
-    font-size: 24px;
+    font-size: 22px;
+    font-style: italic;
+    font-weight: 100;
+    font-family: 'SF UI Text Regular', sans-serif;
   }
 }
