--- a/forex/sass/blocks/trading.scss
+++ b/forex/sass/blocks/trading.scss
@@ -33,6 +33,10 @@
   background-size: contain;
 }
 
+.trading__app {
+  text-align: center;
+}
+
 @media screen and ($tablet-widths) {
   .trading__title {
     margin-top: 30px;
