--- a/mm/css/style.css
+++ b/mm/css/style.css
@@ -199,6 +199,14 @@ body {
     background: #000; }
   .button--title {
     font-size: 16px; }
+  .button--green {
+    padding: 8px 60px;
+    color: #fff;
+    font-size: 20px;
+    border: 2px solid #009f3c;
+    background: #009f3c; }
+    .button--green:hover {
+      color: #009f3c; }
 
 .sub-nav {
   display: -webkit-box;
@@ -217,6 +225,9 @@ body {
     text-decoration: none;
     text-transform: uppercase;
     font-family: 'SF UI Display Regular', sans-serif; }
+
+.trading {
+  border-bottom: 2px solid #c6c6c6; }
 
 .trading__flex {
   display: -webkit-box;
@@ -266,3 +277,37 @@ body {
 
 .trading__box--algo {
   background: url("../img/trading-4.png") no-repeat top; }
+
+.trade {
+  padding: 80px 0; }
+  .trade video {
+    width: 600px; }
+
+.trade__flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between; }
+
+.trade__left {
+  width: 400px;
+  text-align: center; }
+  .trade__left h1 {
+    margin-bottom: 40px;
+    font-size: 60px;
+    font-family: 'SF UI Display Black', sans-serif;
+    text-transform: uppercase; }
+  .trade__left p {
+    margin-bottom: 60px;
+    font-size: 20px;
+    font-weight: bold;
+    font-family: 'SF UI Display', sans-serif;
+    text-transform: uppercase;
+    opacity: 0.7; }
+  .trade__left small {
+    display: block;
+    margin-top: 15px;
+    font-family: 'SF UI Display', sans-serif;
+    opacity: 0.7; }
