--- a/mm/sass/blocks/button.scss
+++ b/mm/sass/blocks/button.scss
@@ -25,4 +25,16 @@
   &--title {
     font-size: 16px;
   }
+  
+  &--green {
+    padding: 8px 60px;
+    color: #fff;
+    font-size: 20px;
+    border: 2px solid $gc;
+    background: $gc;
+    
+    &:hover {
+      color: $gc;
+    }
+  }
 }
