--- a/mm/css/style.css
+++ b/mm/css/style.css
@@ -311,3 +311,49 @@ body {
     margin-top: 15px;
     font-family: 'SF UI Display', sans-serif;
     opacity: 0.7; }
+
+.trade__right {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column; }
+
+.trade__link {
+  -ms-flex-item-align: center;
+  align-self: center; }
+
+.edge {
+  background: url("../img/edge.png") no-repeat;
+  background-attachment: fixed; }
+
+.edge__flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+  padding: 80px 0; }
+
+.edge__box {
+  width: 180px;
+  padding-top: 150px;
+  color: #fff;
+  text-align: center;
+  background: url("../img/edge-box.png") no-repeat top; }
+  .edge__box b {
+    font-size: 30px;
+    font-family: 'SF UI Display', sans-serif; }
+  .edge__box p {
+    font-family: 'SF UI Display', sans-serif; }
+
+.live {
+  padding: 80px 0; }
+  .live h1 {
+    font-family: 'SF UI Display Bold', sans-serif;
+    text-align: center; }
+  .live iframe {
+    width: 100%;
+    height: 520px; }
