--- a/mm/sass/blocks/live.scss
+++ b/mm/sass/blocks/live.scss
@@ -2,8 +2,10 @@
   padding: 80px 0;
   
   & h1 {
+    font-size: 30px;
     font-family: 'SF UI Display Bold', sans-serif;
     text-align: center;
+    text-transform: uppercase;
   }
   
   & iframe {
