--- a/mm/sass/global/base.scss
+++ b/mm/sass/global/base.scss
@@ -7,3 +7,15 @@ body {
   width: 1200px;
   margin: auto;
 }
+
+@media screen and ($tablet-widths) {
+  .container {
+    width: 95%;
+  }
+}
+
+@media screen and ($mobile-widths) {
+  .container {
+    background: green;
+  }
+}
