--- a/mm/sass/blocks/trade.scss
+++ b/mm/sass/blocks/trade.scss
@@ -16,6 +16,7 @@
   text-align: center;
   
   & h1 {
+    margin-top: 0;
     margin-bottom: 40px;
     font-size: 60px;
     font-family: 'SF UI Display Black', sans-serif;
@@ -47,4 +48,30 @@
 .trade__link {
   align-self: center;
   // flex-direction: row;
+}
+
+@media screen and ($tablet-widths) {
+  .trade {
+    
+    & video {
+      // width: 100%;
+    }
+  }
+  
+  .trade__flex {
+    flex-wrap: wrap;
+  }
+  
+  .trade__left {
+    width: auto;
+    margin: auto;
+  }
+  
+  .trade__right {
+    margin: auto;
+  }
+}
+
+@media screen and ($mobile-widths) {
+
 }
