--- a/mm/sass/blocks/header.scss
+++ b/mm/sass/blocks/header.scss
@@ -1,1 +1,11 @@
 .header {}
+
+@media screen and ($tablet-widths) {
+
+}
+
+@media screen and ($mobile-widths) {
+  .header {
+    padding-top: 30px;
+  }
+}
