--- a/mm/sass/blocks/video.scss
+++ b/mm/sass/blocks/video.scss
@@ -49,4 +49,11 @@
 }
 
 @media screen and ($mobile-widths) {
+  .video__title {
+    text-align: center;
+    
+    & h1 {
+      font-size: 30px;
+    }
+  }
 }
