--- a/mm/sass/blocks/edge.scss
+++ b/mm/sass/blocks/edge.scss
@@ -25,3 +25,13 @@
     font-family: 'SF UI Display', sans-serif;
   }
 }
+
+@media screen and ($tablet-widths) {
+
+}
+
+@media screen and ($mobile-widths) {
+  .edge__flex {
+    flex-wrap: wrap;
+  }
+}
