--- a/mm/sass/blocks/trading.scss
+++ b/mm/sass/blocks/trading.scss
@@ -86,5 +86,15 @@
 }
 
 @media screen and ($mobile-widths) {
-
+  .trading__flex {
+    padding-top: 0;
+  }
+  
+  .trading__flex--second {
+    padding-bottom: 50px;
+  }
+  
+  .trading__left {
+    text-align: center;
+  }
 }
