--- a/mm/css/style.css
+++ b/mm/css/style.css
@@ -3,7 +3,7 @@ body {
   margin: 0; }
 
 .container {
-  width: 1200px;
+  width: 1180px;
   margin: auto; }
 
 @media screen and (max-width: 1200px) {
@@ -153,7 +153,7 @@ body {
 .video__content {
   position: absolute;
   top: 0;
-  width: 1200px; }
+  width: 1180px; }
 
 .video__title {
   margin-top: 200px;
@@ -283,6 +283,9 @@ body {
     font-family: 'SF UI Display Regular', sans-serif;
     opacity: 0.7; }
 
+.trading__img {
+  width: 600px; }
+
 .trading__box {
   width: 270px;
   text-align: center; }
@@ -308,7 +311,7 @@ body {
   background: url("../img/trading-4.png") no-repeat top; }
 
 @media screen and (max-width: 1200px) {
-  .trading img {
+  .trading__img {
     display: none; }
   .trading__left {
     width: auto; }
