--- a/mm/sass/blocks/button.scss
+++ b/mm/sass/blocks/button.scss
@@ -23,7 +23,10 @@
   }
   
   &--title {
-    font-size: 16px;
+    padding: 12px 70px;
+    font-size: 30px;
+    font-family: 'SF UI Display Black', sans-serif;
+    border-radius: 50px;
   }
   
   &--green {
@@ -35,6 +38,21 @@
     
     &:hover {
       color: $gc;
+    }
+  }
+  
+  &--number {
+    padding-left: 30px;
+    color: #fff;
+    font-size: 14px;
+    border: none;
+    background: none;
+    background: url('../img/tel.png') no-repeat left;
+    opacity: 0.6;
+    
+    &:hover {
+      background: url('../img/tel.png') no-repeat left;
+      opacity: 1;
     }
   }
 }
