--- a/mm/sass/blocks/video.scss
+++ b/mm/sass/blocks/video.scss
@@ -42,6 +42,31 @@
   }
 }
 
+.video__title--temp {
+  
+  & h1 {
+    text-transform: none;
+  }
+  
+  & p {
+    font-size: 18px;
+    text-transform: none;
+    opacity: 0.6;
+    font-family: 'SF UI Text', sans-serif;
+  }
+  
+  & small {
+    display: block;
+    width: 400px;
+    margin-top: 30px;
+    font-size: 12px;
+    font-family: 'SF UI Text', sans-serif;
+    text-align: center;
+    text-transform: none;
+    opacity: 0.6;
+  }
+}
+
 @media screen and ($tablet-widths) {
   .video__content {
     width: 95%;
