--- a/mm/sass/blocks/sub-nav.scss
+++ b/mm/sass/blocks/sub-nav.scss
@@ -21,3 +21,13 @@
   margin: 0;
   margin-left: auto;
 }
+
+@media screen and ($tablet-widths) {
+  
+}
+
+@media screen and ($mobile-widths) {
+  .sub-nav--temp {
+    margin: auto;
+  }
+}
