--- a/mm/sass/blocks/button.scss
+++ b/mm/sass/blocks/button.scss
@@ -56,3 +56,17 @@
     }
   }
 }
+
+@media screen and ($tablet-widths) {
+  
+}
+
+@media screen and ($mobile-widths) {
+  .button {
+    
+    &--title {
+      padding: 8px 35px;
+      font-size: 20px;
+    }
+  }
+}
