--- a/mm/sass/blocks/give.scss
+++ b/mm/sass/blocks/give.scss
@@ -30,3 +30,23 @@
     opacity: 0.6;
   }
 }
+
+@media screen and ($tablet-widths) {
+}
+
+@media screen and ($mobile-widths) {
+  .give {
+    
+    & h1 {
+      font-size: 30px;
+    }
+  }
+  
+  .give__flex {
+    flex-wrap: wrap;
+  }
+  
+  .give__box {
+    margin: auto;
+  }
+}
