--- a/mm/sass/blocks/video.scss
+++ b/mm/sass/blocks/video.scss
@@ -85,4 +85,13 @@
       font-size: 18px;
     }
   }
+  
+  .video__title--temp {
+    
+    & small {
+      width: auto;
+      margin: auto;
+      margin-top: 30px;
+    }
+  }
 }
