--- a/mm/templates/about-us.html
+++ b/mm/templates/about-us.html
@@ -15,7 +15,7 @@
           <a href="../index.html">
             <img src="../img/logo-w.svg" height="50" alt="MultiplyMarket">
           </a>
-          <div class="main-nav__user">
+          <div class="main-nav__user  main-nav__user--temp">
             <a class="button" href="#">Open live account</a>
             <a class="button  button--black" href="#">Log In</a>
             <a class="button  button--number" href="tel:+442038290032">442038290032</a>
@@ -31,7 +31,7 @@
       </div>
       <div class="video__title  video__title--temp">
         <h1>Trade with Multiply Market</h1>
-        <p>Multiply Market presents its users with the optimal platform for investing in Forex, Futures and Commodities.<br>We are committed to providing each and every user with the best experience possible, and always aim to provide the necessary means<br>and resources for successful trading.</p>
+        <p>Multiply Market presents its users with the optimal platform for investing in Forex, Futures and Commodities. We are committed to providing each and every user with the best experience possible, and always aim to provide the necessary means and resources for successful trading.</p>
         <a href="#" class="button  button--title">Open account</a>
         <small>By clicking the "Open account" button I declare that I have carefully read the Terms & Conditions and Privacy Policy with which I fully understand, accept and agree.</small>
       </div>
