--- a/mm/sass/blocks/title.scss
+++ b/mm/sass/blocks/title.scss
@@ -3,3 +3,8 @@
   background: #646464 url('../img/t-bg.png') no-repeat top;
   background-size: cover;
 }
+
+.title--acc {
+  background: #434341 url('../img/a-bg.png') no-repeat top;
+  background-size: cover;
+}
