--- a/mm/templates/about-us.html
+++ b/mm/templates/about-us.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>MultiplyMarket</title>
+  <title>About Us - MultiplyMarket</title>
   <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
@@ -24,12 +24,12 @@
       </div>
     </header>
     <div class="container">
-      <div class="sub-nav  sub-nav--temp">
+      <div class="sub-nav">
         <a href="#">Accounts</a>
         <a href="#">Platforms</a>
         <a href="#">Tools</a>
       </div>
-      <div class="video__title  video__title--temp">
+      <div class="video__title  video__title--about">
         <h1>Trade with Multiply Market</h1>
         <p>Multiply Market presents its users with the optimal platform for investing in Forex, Futures and Commodities. We are committed to providing each and every user with the best experience possible, and always aim to provide the necessary means and resources for successful trading.</p>
         <a href="#" class="button  button--title">Open account</a>
