--- a/mm/sass/blocks/trading.scss
+++ b/mm/sass/blocks/trading.scss
@@ -35,8 +35,7 @@
 }
 
 .trading__box {
-  width: 270px;
-  // padding-top: 270px;
+  width: 250px;
   text-align: center;
   
   & img {
@@ -53,6 +52,7 @@
   
   & p {
     font-family: 'SF UI Display Regular', sans-serif;
+    text-align: justify;
     opacity: 0.7;
   }
 }
