--- a/mm/sass/blocks/video.scss
+++ b/mm/sass/blocks/video.scss
@@ -12,7 +12,7 @@
     width: 100%;
     height: 34px;
     padding-top: 15px;
-    background: #252525;
+    background: #000;
   }
 }
 
@@ -42,7 +42,7 @@
   }
 }
 
-.video__title--temp {
+.video__title--about {
   
   & h1 {
     text-transform: none;
@@ -64,6 +64,30 @@
     text-align: center;
     text-transform: none;
     opacity: 0.6;
+  }
+}
+
+.video__title--account {
+  display: flex;
+  align-items: center;
+  margin-top: 0;
+  padding-top: 40px;
+  padding-bottom: 20px;
+  
+  & h1 {
+    margin: 0;
+    font-size: 50px;
+    text-transform: none;
+  }
+  
+  & p {
+    width: 500px;
+    margin: 0;
+    padding-left: 40px;
+    font-size: 13px;
+    text-transform: none;
+    opacity: 0.6;
+    font-family: 'SF UI Text', sans-serif;
   }
 }
 
